Graph editor zoom to selected ignores scrollbar occlusion #68677

Closed
opened 2019-08-15 08:49:20 +02:00 by Konstantins Visnevskis · 8 comments

win7,64,2.8

Graph editor zoom to selected ignores scrollbar occlusion.

  • Press "." to view curve -> Scroll bar occludes the curve

curve.blend

win7,64,2.8 Graph editor zoom to selected ignores scrollbar occlusion. - Press "." to view curve -> Scroll bar occludes the curve [curve.blend](https://archive.blender.org/developer/F7665477/curve.blend)

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm, not sure if this really qualifies as a bug, but this could be improved I guess, will keep with low prio...

Hm, not sure if this really qualifies as a bug, but this could be improved I guess, will keep with low prio...

Regarding being a bug or not - you can't select a node after running the function that is supposed to make it available for selection (visible), so...

Regarding being a bug or not - you can't select a node after running the function that is supposed to make it available for selection (visible), so...
Member

In #68677#753779, @KonstantinsVisnevskis wrote:
Regarding being a bug or not - you can't select a node after running the function that is supposed to make it available for selection (visible), so...

True, its weak...

> In #68677#753779, @KonstantinsVisnevskis wrote: > Regarding being a bug or not - you can't select a node after running the function that is supposed to make it available for selection (visible), so... True, its weak...

Also - this is even less of a bug, but graph editor frame strip eats away from it's viewport when making graph editor region full screen and back. Possibly it should be excluded from viewport height together with scrollbar, although strip's bg_color could just be more transparent by default, as what's behind it is actually still clickable, despite being hardly visible.

Also - this is even less of a bug, but graph editor frame strip eats away from it's viewport when making graph editor region full screen and back. Possibly it should be excluded from viewport height together with scrollbar, although strip's bg_color could just be more transparent by default, as what's behind it is actually still clickable, despite being hardly visible.

This issue was referenced by 1ee253c014

This issue was referenced by 1ee253c014c3280c8d5e8aebdaa880cfcd4cbd11
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-01-21 16:38:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68677
No description provided.