Fix T68677: Graph Editor zoom to selected ignores scrollbar occlusion

Reviewed by: Sybren Stüvel, Julian Eisel

Differential Revision: https://developer.blender.org/D6309